--- a/advising/makefile
+++ b/advising/makefile
@@ -1,5 +1,7 @@
 ALL = \
-	physics_bs_schedule.pdf
+	physics_astrominor_schedule.pdf \
+	physics_bs_schedule.pdf \
+	physics_biochem_schedule.pdf
 
 LATEX = xelatex
 
