--- a/advising/makefile
+++ b/advising/makefile
@@ -1,4 +1,5 @@
 ALL = \
+	physics_threetwo_schedule.pdf \
 	physics_astrominor_schedule.pdf \
 	physics_bs_schedule.pdf \
 	physics_biochem_schedule.pdf
