added computational science major and 4-1 info

--- a/advising/makefile
+++ b/advising/makefile
@@ -1,4 +1,6 @@
 ALL = \
+	faq_clarkson41.pdf \
+	computational_science_bs_schedule.pdf \
 	physics_computational_schedule.pdf \
 	physics_education_schedule.pdf \
 	physics_threetwo_schedule.pdf \
