added ipython checkpoints

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,8 @@ MakeDiskGalaxy
 *.so
 *.pyc
 *.pyo
- 
+*.ipynb_checkpoints
+
 # Packages #
 ############
 # it's better to unpack these files and commit the raw source
